--- a/config/locales/en/sdg.yml
+++ b/config/locales/en/sdg.yml
@@ -439,3 +439,12 @@ en:
       hint: "You can introduce the code of a specific goal/target or a text to find one"
       placeholder: "Write a goal or target code or description"
       remove_tag: "Remove"
+    stats:
+      budget_investments:
+        amount: "Approved budget"
+        approved: "Winner investment projects"
+        sent: "Investment projects sent"
+      debates: "Debates"
+      polls: "Polls"
+      proposals: "Proposals"
+      title: "Sustainable Development Goals - Stats"
