--- a/config/locales/es/sdg.yml
+++ b/config/locales/es/sdg.yml
@@ -436,6 +436,15 @@ es:
       goal_list: "Listado de objetivos"
       help:
         title: "¿Qué ODS y metas se alinean con mi %{record}?"
-      hint: "Puedes introducir el código de un objetivo/meta específico o un texto para encontrar uno"  
+      hint: "Puedes introducir el código de un objetivo/meta específico o un texto para encontrar uno"
       placeholder: "Escribe las etiquetas que desees"
       remove_tag: "Eliminar"
+    stats:
+      budget_investments:
+        amount: "Presupuesto"
+        approved: "Proyectos de inversión ganadores"
+        sent: "Proyectos de inversión enviados"
+      debates: "Debates"
+      polls: "Votaciones"
+      proposals: "Propuestas"
+      title: "Objetivos del Desarrollo Sostenible - Estadísticas"
